--- a/rmw_ndn/CMakeLists.txt
+++ b/rmw_ndn/CMakeLists.txt
@@ -80,6 +80,8 @@ if(BUILD_TESTING)
   ament_lint_auto_find_test_dependencies()
 endif()
 
+ament_package()
+
 install(
   TARGETS rmw_ndn
   ARCHIVE DESTINATION lib
