--- a/rmw_ndn/package.xml
+++ b/rmw_ndn/package.xml
@@ -16,9 +16,11 @@
   <build_depend>rmw</build_depend>
   <build_depend>rosidl_generator_c</build_depend>
   <build_depend>rosidl_typesupport_cbor</build_depend>
+  <build_depend>rosidl_typesupport_cbor_cpp</build_depend>
 
   <build_export_depend>rosidl_generator_c</build_export_depend>
   <build_export_depend>rosidl_typesupport_cbor</build_export_depend>
+  <build_export_depend>rosidl_typesupport_cbor_cpp</build_export_depend>
 
   <exec_depend>rmw</exec_depend>
 
