--- a/rosidl_typesupport_cbor_cpp/CMakeLists.txt
+++ b/rosidl_typesupport_cbor_cpp/CMakeLists.txt
@@ -1,33 +1,33 @@
 cmake_minimum_required(VERSION 3.5)
 
-project(rosidl_typesupport_cbor)
+project(rosidl_typesupport_cbor_cpp)
 
-# Default to C11
-if(NOT CMAKE_C_STANDARD)
-  set(CMAKE_C_STANDARD 11)
+# Default to C++14
+if(NOT CMAKE_CXX_STANDARD)
+  set(CMAKE_CXX_STANDARD 14)
 endif()
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
-find_package(ament_cmake REQUIRED)
 find_package(ament_cmake_python REQUIRED)
+find_package(ament_cmake_ros REQUIRED)
+find_package(rosidl_typesupport_introspection_c REQUIRED)
 
 ament_export_dependencies(rosidl_cmake)
 ament_export_dependencies(rosidl_generator_c)
-# The reason the impl folder is exported is that it contains the implementation
-# for the get_*_type_support_handle functions and defines the opensplice
-# specific version of these functions.
+ament_export_dependencies(rosidl_generator_cpp)
+ament_export_dependencies(rosidl_typesupport_interface)
 
 ament_export_include_directories(include)
 
 ament_python_install_package(${PROJECT_NAME})
 
-add_library(${PROJECT_NAME} SHARED src/identifier.c src/cbor.c)
+add_library(${PROJECT_NAME} src/identifier.cpp)
 if(WIN32)
   target_compile_definitions(${PROJECT_NAME}
-    PRIVATE "ROSIDL_TYPESUPPORT_cbor_BUILDING_DLL")
+    PRIVATE "ROSIDL_TYPESUPPORT_INTROSPECTION_CPP_BUILDING_DLL")
 endif()
 target_include_directories(${PROJECT_NAME}
   PUBLIC
@@ -35,20 +35,26 @@ target_include_directories(${PROJECT_NAME}
 )
 ament_export_libraries(${PROJECT_NAME})
 
-ament_index_register_resource("rosidl_typesupport_c")
+ament_index_register_resource("rosidl_typesupport_cpp")
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
   ament_lint_auto_find_test_dependencies()
 endif()
 
+if(BUILD_SHARED_LIBS)
+  set(${PROJECT_NAME}_LIBRARY_TYPE "SHARED")
+else()
+  set(${PROJECT_NAME}_LIBRARY_TYPE "STATIC")
+endif()
+
 ament_package(
-  CONFIG_EXTRAS "rosidl_typesupport_cbor-extras.cmake.in"
+  CONFIG_EXTRAS "rosidl_typesupport_cbor_cpp-extras.cmake.in"
 )
 
 install(
-  PROGRAMS bin/rosidl_typesupport_cbor
-  DESTINATION lib/rosidl_typesupport_cbor
+  PROGRAMS bin/rosidl_typesupport_cbor_cpp
+  DESTINATION lib/rosidl_typesupport_cbor_cpp
 )
 install(
   DIRECTORY cmake resource
