--- a/rosidl_typesupport_cbor_cpp/package.xml
+++ b/rosidl_typesupport_cbor_cpp/package.xml
@@ -14,7 +14,7 @@
   <buildtool_export_depend>ament_cmake</buildtool_export_depend>
   <buildtool_export_depend>rosidl_cmake</buildtool_export_depend>
 
-  <build_depend>rosidl_typesupport_introspection_c</build_depend>
+  <build_depend>rosidl_typesupport_cbor</build_depend>
 
   <exec_depend>rosidl_cmake</exec_depend>
   <exec_depend>rosidl_generator_c</exec_depend>
