--- a/rosidl_typesupport_cbor_cpp/package.xml
+++ b/rosidl_typesupport_cbor_cpp/package.xml
@@ -2,11 +2,11 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>rosidl_typesupport_cbor_cpp</name>
-  <version>0.4.0</version>
+  <version>0.0.0</version>
   <description>
     Generate the message type support for dynamic message construction in C++.
   </description>
-  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
+  <maintainer email="astralien3000@yahoo.fr">Loïc Dauphin</maintainer>
   <license>Apache License 2.0</license>
 
   <buildtool_depend>ament_cmake_ros</buildtool_depend>
