--- a/rmw_ndn/package.xml
+++ b/rmw_ndn/package.xml
@@ -5,7 +5,7 @@
   <version>0.0.0</version>
   <description>Implement the ROS middleware interface using NDN.</description>
   <maintainer email="astralien3000@yahoo.fr">Loïc Dauphin</maintainer>
-  <license>GPL</license>
+  <license>LGPL</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
   <buildtool_depend>rosidl_cmake</buildtool_depend>
