--- a/rosidl_typesupport_cbor/CMakeLists.txt
+++ b/rosidl_typesupport_cbor/CMakeLists.txt
@@ -10,6 +10,7 @@ endif()
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
+add_definitions(-DMODULE_CBOR_FLOAT)
 
 find_package(ament_cmake REQUIRED)
 find_package(ament_cmake_python REQUIRED)
@@ -21,6 +22,7 @@ ament_export_dependencies(rosidl_generator_c)
 # specific version of these functions.
 
 ament_export_include_directories(include)
+ament_export_definitions(-DMODULE_CBOR_FLOAT)
 
 ament_python_install_package(${PROJECT_NAME})
 
